--- a/site-courtier/back/package.json
+++ b/site-courtier/back/package.json
@@ -14,9 +14,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "env": "^0.0.2",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "sequelize": "^6.32.0",
-    "stytch": "^7.1.2"
+    "stytch": "^7.1.3"
   }
 }
