--- a/site-courtier/back/package.json
+++ b/site-courtier/back/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "env": "^0.0.2",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.22",
     "sequelize": "^6.32.0",
     "stytch": "^7.1.3"
   }
