--- a/site-courtier/back/package.json
+++ b/site-courtier/back/package.json
@@ -12,11 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "env": "^0.0.2",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
+    "mysql2": "^3.4.3",
     "nodemon": "^2.0.22",
     "sequelize": "^6.32.0",
     "stytch": "^7.1.3"
