--- a/site-courtier/back/package.json
+++ b/site-courtier/back/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "env": "^0.0.2",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.4.3",
     "nodemon": "^2.0.22",
