--- a/site-courtier/back/.env
+++ b/site-courtier/back/.env
@@ -1,3 +1,4 @@
+# Permet de lier ca a Stytch
 PROJECT_ID ="project-test-1607c2cb-f51b-4853-ab27-80ab3ba725e8"
 SECRET="secret-test-D9JSOROWetvJUw0RqMwoC99NjS5g14TMWWM="
 
